# MigTD

./: .gitmodules  Cargo.toml  migtdemu.sh
.github/workflows/: main.yml
config/: policy_issuer_chain.pem  policy_v2_signed.json
config/AzCVMEmu/: collateral_azure_thim.json  policy_issuer_chain.pem  policy_v2_signed.json
config/Azure/: collateral_thim.json  policy_issuer_chain.pem  policy_v2_raw.json  policy_v2_signed.json  servtd_info.json  tcb_mapping.json  td_identity.json
sh_script/: build_AzCVMEmu_policy_and_test.sh  build_azure_mock_test.sh
sh_script/Azure/: Makefile  build_azure_mock_test.sh
src/attestation/: Cargo.toml  build.rs  fixup-libservtd-attest-lib.sh
src/attestation/src/: attest.rs  igvmattest.rs  lib.rs  mock_quote.rs  tdreport.rs
src/crypto/: Cargo.toml
src/crypto/src/: crl.rs  lib.rs
src/crypto/src/rustls_impl/: ecdsa.rs
src/migtd/: Cargo.toml  build.rs
src/migtd/src/: event_log.rs  mig_policy.rs
src/migtd/src/ratls/: server_client.rs
src/policy/sh_scripts/: AzCVMEmu_policy.md  README.md  build_custom_policy_from_quote.sh  gen_signed_policy_and_cert_chain.sh
src/policy/src/: lib.rs
src/policy/src/v1/: mod.rs  verify.rs
src/policy/src/v2/: collaterals.rs  mod.rs  policy.rs  servtd_collateral.rs
tools/migtd-collateral-generator/: Cargo.toml  readme.md
tools/migtd-collateral-generator/src/: collateral.rs  http_client.rs  lib.rs  main.rs  pcs_client.rs
tools/migtd-collateral-generator/src/provider/: azure_thim.rs  intel_pcs.rs  mod.rs
tools/migtd-igvm-verifier/: Cargo.toml  README.md
tools/migtd-igvm-verifier/src/: main.rs
tools/migtd-policy-generator/: Cargo.toml
tools/migtd-policy-verifier/: Cargo.toml  readme.md
tools/migtd-policy-verifier/src/: main.rs
tools/migtd-quote-extractor/: Cargo.toml  README.md
tools/migtd-quote-extractor/src/: main.rs
