[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
der = { version = "0.7.9", features = ["oid", "alloc", "derive"] }
spin = "0.9.2"
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall"}
td-payload = { path = "../../deps/td-shim/td-payload", features = ["tdx"] }
log = { version = "0.4.13" }

# Use emulated versions for AzCVMEmu
tdx-tdcall-emu = { path = "../../deps/td-shim-AzCVMEmu/tdx-tdcall", optional = true }
td-payload-emu = { path = "../../deps/td-shim-AzCVMEmu/td-payload-emu", optional = true }

# For no-get-quote feature, only need the quote_parser module (no std dependencies)
tdx-tdcall-mock-quote = { package = "tdx-tdcall-emu", path = "../../deps/td-shim-AzCVMEmu/tdx-tdcall", features = ["mock-quote", "test_mock_report"], default-features = false, optional = true }

[features]
default = []
test = []
AzCVMEmu = ["tdx-tdcall-emu", "td-payload-emu"]
attest-lib-ext = []
policy_v2=[]
igvm-attest = []  # Get quote via IGVM interface (mutually exclusive with no-get-quote)
vmcall-raw = []
no-get-quote = ["tdx-tdcall-mock-quote"]  # Use mock quote and mock TD report for testing (mutually exclusive with igvm-attest)
