[package]
name = "migtd-quote-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
az-tdx-vtpm = "0.7"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
